<resources>
    <string name="app_name">Gablestone Quest</string>
    <string name="action_settings">Info</string>
    <string name="app_tour_slides">How does it work</string>
    <string name="title_activity_toolbar" translatable="false">Toolbar</string>
    <string name="title_activity_tabbed" translatable="false">TabbedActivity</string>
    <string name="intro_title">About Gable Stones</string>
    <string name="about_gable_stones">Traditionally houses and mansions were decorated with gable stones: carved and painted stone tablets, fixed to the facade.\nBefore Amsterdam introduced a system of street names, a building was referred to by its gable stone.\nBesides decorating the facade, a gable stone tells about the (former) owner, his profession or beliefs.\nExplore Amsterdam and immerse into its rich history in an unique and memorable way.</string>
    <string name="topic_tour">Welcome to Gable Stone Quest Amsterdam </string>
    <string name="explanation">Follow the quest and locate the special gable stones. The quest leads you through picturesque streets and along idyllic canals.\nDiscover hidden architectonic gems and enjoy the unique ambiance of Amsterdam\'s historic center.</string>
    <string name="quest_explanation">Your scavenger hunt adventure will begin in Brouwersgracht and will take you around the Jordaan District.\nFollow the quest and discover special gable stones.\nYour quest will give you a new perspective on the city as you weave through picturesque streets and along idyllic canals to find your next location.\nDiscover special gable stones, architectonic gems and enjoy the unique ambiance of\nAmsterdam\'s historic center in a fun and memorable way.</string>
    <string name="quest_highlights">Quest Highlights</string>
    <string name="text_gablestones_info">Traditionally houses and mansions were decorated with gable  stones: carved and painted stone tablets, fixed to the facade.\nBefore Amsterdam introduced a system of street names, a building was referred to by its gable stone.</string>
    <string name="locate_on_map">Show my position on map</string>
    <string name="click_on_img">Click again to show image full screen</string>
    <string name="stone_located">Congratulations - you have located the gable stone!</string>
    <string name="stone_too_far">Not there yet - Keep on looking!</string>
    <string name="all_stones_located">Congratulations - you have located all gable stones of your tour!</string>
    <string name="please_leave_rating">Hope you enjoyed the tour. Please share your experience <a href="https://play.google.com/store/apps/details?id=com.aleaf.gablestones">on Google Play</a> - Thank you!</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location" translatable="false">Access to the location service is required to demonstrate the "Show me my current location on the map" feature, which shows your current location on the map.</string>
    <string name="location_permission_denied" translatable="false">This app requires location permission to enable the "Show me my current location on the map" functionality. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast" translatable="false">Location permission is required to show your location on the map.</string>
    <string name="title_activity_clue_detail_activiy">Clues Details</string>

    <!--Gable Stones-->
    <string name="street_address_1" translatable="false">Brouwersgracht 52</string>
    <string name="street_address_2" translatable="false">Lange Straat 5</string>
    <string name="street_address_3" translatable="false">Lange Straat 17</string>
    <string name="street_address_4" translatable="false">Lange Straat 28</string>
    <string name="street_address_5" translatable="false">Lange Straat 50</string>
    <string name="street_address_6" translatable="false">Lange Straat 92</string>
    <string name="street_address_7" translatable="false">Herengracht 105</string>
    <string name="street_address_8" translatable="false">Keizersgracht 104</string>
    <string name="street_address_9" translatable="false">Keizersgracht 172</string>
    <string name="street_address_10" translatable="false">Egelantiersgracht 10</string>
    <string name="street_address_11" translatable="false">Egelantiersgracht 15</string>
    <string name="street_address_12" translatable="false">Egelantiersgracht 72</string>
    <string name="street_address_13" translatable="false">Tweede Egelantiersdwarsst. 20</string>
    <string name="street_address_14" translatable="false">Eerste Tuindwarsstraat 19</string>
    <string name="street_address_15" translatable="false">Eerste Tuindwarsstraat 21</string>
    <string name="street_address_16" translatable="false">Westerstraat 202</string>
    <string name="street_address_17" translatable="false">Westerstraat 54</string>
    <string name="street_address_18" translatable="false">Boomstraat 28</string>
    <string name="street_address_19" translatable="false">Noordermarkt 17</string>
    <string name="street_address_20" translatable="false">Noordermarkt 40</string>

    <string name="gablestone_1">Two Chairs</string>
    <string name="gablestone_2">Rowing Boat</string>
    <string name="gablestone_3">Farmer</string>
    <string name="gablestone_4">The Linden</string>
    <string name="gablestone_5">Carriage House</string>
    <string name="gablestone_6">Horse stables</string>
    <string name="gablestone_7">Papermill</string>
    <string name="gablestone_8">Red Hat</string>
    <string name="gablestone_9">Hourglass</string>
    <string name="gablestone_10">Beer brewer</string>
    <string name="gablestone_11">The young carpenter</string>
    <string name="gablestone_12">Bright sun</string>
    <string name="gablestone_13">Beehive</string>
    <string name="gablestone_14">Baker</string>
    <string name="gablestone_15">Smith</string>
    <string name="gablestone_16">Crowned Lilium Flower</string>
    <string name="gablestone_17">Disappeared Cottages</string>
    <string name="gablestone_18">Boat with 3 Men</string>
    <string name="gablestone_19">The gilded fortune</string>
    <string name="gablestone_20">Fox and Crab</string>

    <string name="lat_1" translatable="false">52.379295</string>
    <string name="lng_1" translatable="false">4.892488</string>

    <!--Headers of fragments and activities-->
    <string name="stone_detail">Clue Detail</string>
    <string name="fragment_about">About</string>
    <string name="fragment_mission">Quest</string>
    <string name="fragment_map">Map</string>

    <!--Text-->
    <string name="welcome_msg">"Follow the quest, locate all gable stones. "</string>
    <string name="title_activity_info" translatable="false">Info</string>
    <string name="title_activity_confetti" translatable="true">Congratulations</string>


    <string name="header_colofon" translatable="false">Colofon</string>
    <string name="text_development" translatable="false">Design and Development: aleaf.nl</string>
    <string name="text_version" translatable="false">Version: 1.0</string>
    <string name="text_icons" translatable="false">Logo adapted from Noun Project (A. Vasiliev)</string>
    <string name="intro_enjoy">Discover and Enjoy!</string>

    <string name="title_activity_fullscreen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_tryout" translatable="false">TryoutActivity</string>

    <!--IntroSlider-->
    <string name="title_activity_welcome" translatable="false">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Gable Stone Quest \n Amsterdam</string>
    <string name="slide_1_desc">Follow the quest, locate all gable stones and discover unique details of Amsterdam\'s history. \n Explore and discover the city in an unique and memorable way. </string>

    <string name="slide_1a_title">Select your Tour</string>
    <string name="slide_1a_desc">Select a tour and enjoy. All tours are about 2km and will take you about 2.5 hours to  complete.</string>

    <string name="slide_2_title">Discover more about historic Amsterdam</string>
    <string name="slide_2_desc">Learn more about gable stones and the stories they tell about former owners of houses they decorate.</string>

    <string name="slide_3_title">Gable stone located</string>
    <string name="slide_3_desc">Once you find a gable stone, press the green \"check\" button.</string>

    <string name="slide_4_title">Locate Me</string>
    <string name="slide_4_desc">Use the \"locate me\" button to see your current location and find the way to the next gable stone in the quest.</string>

    <string name="play_again_desc">To see the welcome slider again, go to Settings - How does it work</string>
    <string name="play_again">Play Again</string>

    <!--Intro Fragment-->
    <string name="intro_start" translatable="false">Start:</string>
    <string name="intro_start_adress" translatable="false">Brouwersgracht 52"</string>
    <string name="intro_end">End:</string>
    <string name="intro_end_adress" translatable="false">Noordermarkt</string>
    <string name="intro_distance">Distance:</string>
    <string name="intro_distance_km" translatable="false">2.5 km</string>
    <string name="intro_time">Time:</string>
    <string name="intro_time_hours">2.5 hours</string>
    <string name="duration_in_hours">about 2.5 hours</string>
    <string name="title_activity_select_tour">Welcome to Gablestone Quest</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mission">Follow the quest</string>
    <string name="title_activity_detail">Gablestone</string>


    <string name="section_format" translatable="false">%1$d</string>

    <!--Select Tour Activity-->
    <string name="button_tour_1">JORDAAN   Charming canals and historic buildings</string>
    <string name="button_tour_2"> OLD CENTER \n Ever since home to merchants and traders</string>

    <!--Colofon Info Activity-->
    <string name="reference_icon" translatable="false">Icons designed by smashicons.com from Flaticon</string>
    <string name="reference_gablestones" translatable="false">More information about gablestones:  www.gevelstenenvanamsterdam.nlv</string>

</resources>
