<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aleaf.gablestones.MainActivity">

    <item
        android:id="@+id/select_tour"
        android:orderInCategory="100"
        android:title="@string/slide_1a_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/intro_tour"
        android:orderInCategory="200"
        android:title="@string/app_tour_slides"
        app:showAsAction="never" />
    <item
        android:id="@+id/open_map"
        android:orderInCategory="300"
        android:title="@string/title_activity_maps"
        app:showAsAction="never"/>
    <item
        android:id="@+id/madeByColofon"
        android:orderInCategory="400"
        android:title="Info"
        app:showAsAction="never" />

    <!--<item-->
        <!--android:id="@+id/confetti"-->
        <!--android:orderInCategory="500"-->
        <!--android:title="Confetti"-->
        <!--app:showAsAction="never"/>-->

</menu>
