<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aleaf.gablestones.ClueDetailActivity"
    tools:showIn="@layout/activity_colofon">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:padding="8dp"
            android:layout_gravity="center"
            android:src="@drawable/image_gablestones" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/feedback"
            android:text="@string/please_leave_rating"
            style="@style/Base.TextAppearance.AppCompat.Small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/colofon"
            android:text="Colofon"
            style="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_development" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_version" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_icons" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Icons designed by smashicons.com from Flaticon " />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="More information about gablestones:  www.gevelstenenvanamsterdam.nl" />
    </LinearLayout>


</ScrollView>