<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aleaf.gablestones.SelectTourActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_select_tour">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/slide_1a_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <TextView
        android:id="@+id/tv_tour_explained"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/explanation"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <RadioGroup
        android:id="@+id/radio_group_select_tour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tour_explained"
        app:layout_constraintVertical_bias="0.41000003">

        <RadioButton
            android:id="@+id/button_tour1"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/button_tour_1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/button_tour2"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/button_tour_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RadioGroup>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_start_tour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/cast_ic_expanded_controller_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_tour_explained"
        app:layout_constraintVertical_bias="0.94" />

    <Button
        android:id="@+id/button_how_does_it_work"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_tour_slides"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_select_tour"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tour_explained"
        app:layout_constraintVertical_bias="0.089999974" />


</android.support.constraint.ConstraintLayout>

