<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <ScrollView android:layout_height="match_parent"
        android:layout_width="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingBottom="32dp"
            android:id="@+id/intro"
            style="@style/AppTheme">
            <TextView
                android:id="@+id/intro_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_tour"
                style="@style/Base.TextAppearance.AppCompat.Title"
                />
            <TextView
                android:id="@+id/intro_quest_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quest_explanation"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_below="@id/intro_title"/>
            <TextView
                android:id="@+id/quest_startpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro_quest_explanation"
                android:text="Start:"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/start_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brouwersgracht 52"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingLeft="8dp"
                android:layout_below="@+id/intro_quest_explanation"
                android:layout_alignParentRight="true" />
            <TextView
                android:id="@+id/quest_endpoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quest_startpoint"
                android:text="End:"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:id="@+id/end_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quest_startpoint"
                android:layout_alignRight="@id/quest_endpoint"
                android:layout_alignParentRight="true"
                android:text="Noordermarkt"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quest_distance"
                android:layout_below="@id/quest_endpoint"
                android:text="Distance:"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/distance_km"
                android:layout_alignRight="@id/quest_distance"
                android:layout_below="@id/quest_endpoint"
                android:layout_alignParentRight="true"
                android:text="2.5km"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingLeft="8dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quest_Time"
                android:layout_below="@id/quest_distance"
                android:text="Time:"
                style="@style/Base.TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_hours"
                android:layout_alignRight="@id/quest_Time"
                android:layout_below="@id/quest_distance"
                android:layout_alignParentRight="true"
                android:text="@string/duration_hours"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingLeft="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/quest_gablestones_info"
                android:layout_below="@id/quest_Time"
                android:paddingTop="8dp"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:text="@string/intro_title"/>
            <TextView
                android:id="@+id/intro_quest_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_gable_stones"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:layout_below="@+id/quest_gablestones_info"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>
    </ScrollView>
    <!-- LinearLayour for AdView-->

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewIntro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    </LinearLayout>